--- a/style.css
+++ b/style.css
@@ -31,3 +31,12 @@ header {
     font-weight: 900;
     color: #f9faf8;
 }
+
+button {
+    border: none;
+    border-radius: 5px;
+    padding: 8px 25px;
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: 700;
+}
