--- a/style.css
+++ b/style.css
@@ -6,11 +6,20 @@ html, body {
 
 header {
     margin: 0px;
-    padding: 0px;
+    padding: 15px 230px 150px;
     background-color: #1f2937;
+    display: flex;
+    flex-direction: column;
 }
 
-.left-header, .right-header {
+.menu {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
+}
+
+ul {
+    list-style: none;
     margin: 0;
     padding: 0;
 }
@@ -26,17 +35,35 @@ header {
     color: #E5E7EB;
 }
 
+.right-header {
+    display: flex;
+    gap: 20px;
+}
+
 .header-text h1 {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
+    margin: 0;
 }
 
 button {
     border: none;
     border-radius: 5px;
-    padding: 8px 25px;
+    padding: 10px 35px;
     background-color: #3882f6;
     color: #f9faf8;
-    font-weight: 700;
+    font-weight: 800;
+    margin-top: 15px;
+    font-size: 18px;
+}
+
+.lower-header {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.header-text {
+    flex-basis: 450px;
 }
