--- a/style.css
+++ b/style.css
@@ -67,3 +67,46 @@ button {
 .header-text {
     flex-basis: 450px;
 }
+
+.random-information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
+}
+
+.random-information h1 {
+    font-size: 36px;
+    font-weight: 900;
+    color: 1F2937;
+    margin-top: 0;
+}
+
+.information-cards {
+    display: flex;
+    justify-content: space-between;
+    width: 800px;
+    padding: 15px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 175px;
+    height: 250px;
+}
+
+.card-outline {
+    outline: 5px solid #3882f6;
+    height: 150px;
+    width: 150px;
+    border-radius: 5px;
+    margin: 15px;
+}
+
+.card-text {
+    font-size: 18px;
+    text-align: center;
+    color: #7b7b7b;
+}
