--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ ul {
 
 button {
     border: none;
-    border-radius: 5px;
-    padding: 10px 35px;
+    border-radius: 8px;
+    padding: 8px 30px;
     background-color: #3882f6;
     color: #f9faf8;
     font-weight: 800;
@@ -134,4 +134,35 @@ button {
 .author {
     align-self: flex-end;
     font-weight: 900;
+}
+
+#cta-button {
+    outline: 2px solid white;
+    margin: 0px;
+}
+
+.call-to-action {
+    background-color: white;
+    padding: 100px 250px;
+}
+
+.cta-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    border-radius: 10px;
+    background-color: #3882f6;
+    padding: 25px 100px;
+}
+
+.cta-text {
+    color: #E5E7EB;
+}
+
+.cta-text h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+    color: #f9faf8;
 }
